[project]
name = "sqruff"
version = "0.25.29"
requires-python = ">=3.9"
dependencies = [
    "Jinja2>=3.0.0",
    "regex"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "maturin>=1.8.0",
    "jinja2>=3.0.0",
    "regex",
    "dbt-core>=1.4.1",
    "dbt-postgres>=1.4.1",
    "jinja2-simple-tags>=0.3.1"
]
jinja = [
    "regex",
    "jinja2>=3.0.0",
    "jinja2-simple-tags>=0.3.1"
]
dbt = [
    "regex",
    "jinja2>=3.0.0",
    "jinja2-simple-tags>=0.3.1",
    "dbt-core>=1.4.1",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["crates"]
addopts = "-v --cov"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["crates/lib/src/templaters"]

[tool.ruff.lint]
ignore = ["S101", "UP006", "ANN001", "PT006", "ARG005", "SLF001", "PLR0913", "ANN201", "FIX002", "FA100", "TD003", "TD002", "SIM118", "PLW2901", "PLR0915", "PLR0912", "C901", "EM102", "TRY003", "FBT002", "FBT001", "ARG002", "B904", "E501", "D417", "EM101", "B904", "INP001", "FIX004", "ANN401", "C408", "D107", "ANN204", "D400", "D401", "D101", "UP035", "D103", "D100", "D211", "D213", "D203", "ISC001", "COM812"]

