load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:cargo_build.bzl", "cargo_hack_suite")
load(":hack.bzl", "HACK", "MANIFEST")

# Per-feature `cargo check` targets mirroring `cargo hack --each-feature`.
# The HACK map lives in hack.bzl and is reconciled against cargo-hack by
# //:hack_reconcile. Run the whole crate sweep via `bazel test //crates/cli-lib:hack`.
cargo_hack_suite(
    name = "hack",
    srcs = ["//:cargo_srcs"],
    manifest = MANIFEST,
    variations = HACK,
    vendor = "//:cargo_deps",
)

rust_library(
    name = "sqruff-cli-lib",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/lib:sqruff-lib",
        "//crates/lib-core:sqruff-lib-core",
        "//crates/lsp:sqruff-lsp",
    ],
)

# Variant with codegen-docs feature enabled for doc generation
# codegen-docs requires the python feature which enables more templaters
rust_library(
    name = "sqruff-cli-lib-codegen",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["src/docs/*.md"]),
    crate_features = [
        "codegen-docs",
        "python",
    ],
    crate_name = "sqruff_cli_lib",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/lib:sqruff-lib-python",
        "//crates/lib-core:sqruff-lib-core",
        "//crates/lib-dialects:sqruff-lib-dialects",
        "//crates/lsp:sqruff-lsp",
        "@crates//:clap-markdown",
        "@crates//:minijinja",
    ],
)

filegroup(
    name = "codegen_templates",
    srcs = glob(["src/docs/*.md"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "machete_srcs",
    srcs = glob(
        [
            "src/**/*.rs",
            "src/**/*.md",
            "tests/**/*.rs",
            "benches/**/*.rs",
        ],
        allow_empty = True,
    ) + ["Cargo.toml"],
    visibility = ["//visibility:public"],
)
