[package]
name = "sqruff-cli-lib"
description = "A high-speed SQL linter."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.87"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binbstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-windows-x86_64.zip"
pkg-fmt = "zip"

[lints]
workspace = true

[features]
python = ["sqruff-lib/python", "pyo3"]
codegen-docs = ["clap-markdown", "minijinja", "serde", "python"]

[dependencies]
sqruff-lib.workspace = true
sqruff-lsp.workspace = true
strum_macros.workspace = true

clap = { version = "4", features = ["derive"] }
console = "0.15.8"
ignore = "0.4.23"
pyo3 = { version = "0.25.0", optional = true }


# Codegen dependencies
clap-markdown = { version = "0.1.5", optional = true }
minijinja = { version = "2.10.2", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.20.0"
