[package]
name = "sqruff-cli-lib"
description = "A high-speed SQL linter."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.88"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-windows-x86_64.zip"
pkg-fmt = "zip"

[lints]
workspace = true

[features]
parser = ["sqruff-lib/parser"]
python = ["sqruff-lib/python", "pyo3"]
codegen-docs = ["clap-markdown", "minijinja", "python"]

[dependencies]
sqruff-lib.workspace = true
sqruff-lib-core.workspace = true
sqruff-lsp.workspace = true
strum_macros.workspace = true
fern = "0.7"
log.workspace = true
anstyle = "1.0"
clap = { version = "4", features = ["derive"] }
ignore = "0.4.23"
pyo3 = { version = "0.27.2", optional = true }
# Codegen dependencies
clap-markdown = { version = "0.1.5", optional = true }
minijinja = { version = "2.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.23.0"
fancy-regex = { version = "0.17" }
