[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin" 

[project]
name = "sqruff" 
version = "0.29.3"
description = "A SQL linter written in rust." 
requires-python = ">=3.9" 

[project.optional-dependencies]
jinja = [
    "regex",
    "jinja2>=3.0.0",
    "jinja2-simple-tags>=0.3.1"
]
dbt = [
    "regex",
    "jinja2>=3.0.0",
    "jinja2-simple-tags>=0.3.1",
    "dbt-core>=1.4.1",
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "sqruff"
python-source = "python"
strip = true
exclude = [
]
include = [
    "rust-toolchain.toml",
]

