load("//:cargo_build.bzl", "cargo_hack_suite")
load(":hack.bzl", "HACK", "MANIFEST")

exports_files([
    "Cargo.toml",
    "pyproject.toml",
])

# Per-feature `cargo check` targets mirroring `cargo hack --each-feature`.
# The HACK map lives in hack.bzl and is reconciled against cargo-hack by
# //:hack_reconcile. Run the whole crate sweep via `bazel test //crates/cli-python:hack`.
cargo_hack_suite(
    name = "hack",
    srcs = ["//:cargo_srcs"],
    manifest = MANIFEST,
    variations = HACK,
    vendor = "//:cargo_deps",
)

# Python source files for linting
filegroup(
    name = "python_srcs",
    srcs = glob(["python/**/*.py"]),
    visibility = ["//visibility:public"],
)

# Test fixtures for Python tests
filegroup(
    name = "test_fixtures",
    srcs = glob(
        ["tests/**/*"],
        exclude = ["tests/**/*.rs"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "machete_srcs",
    srcs = glob(
        [
            "src/**/*.rs",
            "tests/**/*.rs",
            "benches/**/*.rs",
        ],
        allow_empty = True,
    ) + ["Cargo.toml"],
    visibility = ["//visibility:public"],
)
