load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "sqruff",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/cli-lib:sqruff-cli-lib",
    ],
)

# Binary with codegen-docs feature for generating documentation
rust_binary(
    name = "sqruff-codegen",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["codegen-docs"],
    data = ["//crates/cli-lib:codegen_templates"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/cli-lib:sqruff-cli-lib-codegen",
    ],
)

filegroup(
    name = "machete_srcs",
    srcs = glob(
        [
            "src/**/*.rs",
            "tests/**/*.rs",
            "benches/**/*.rs",
        ],
        allow_empty = True,
    ) + ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_fixtures",
    srcs = glob(["tests/**"]),
    visibility = ["//visibility:public"],
)
