load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:cargo_build.bzl", "cargo_hack_suite")
load(":hack.bzl", "CLOSURE", "HACK", "MANIFEST")

# Per-feature `cargo check` targets mirroring `cargo hack --each-feature`.
# The HACK map lives in hack.bzl and is reconciled against cargo-hack by
# //:hack_reconcile. Run the whole crate sweep via `bazel test //crates/cli:hack`.
cargo_hack_suite(
    name = "hack",
    closure = CLOSURE,
    manifest = MANIFEST,
    variations = HACK,
    vendor = "//:cargo_deps",
)

rust_binary(
    name = "sqruff",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/cli-lib:sqruff-cli-lib",
    ],
)

# Binary with codegen-docs feature for generating documentation
rust_binary(
    name = "sqruff-codegen",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["codegen-docs"],
    data = ["//crates/cli-lib:codegen_templates"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/cli-lib:sqruff-cli-lib-codegen",
    ],
)

filegroup(
    name = "machete_srcs",
    srcs = glob(
        [
            "src/**/*.rs",
            "tests/**/*.rs",
            "benches/**/*.rs",
        ],
        allow_empty = True,
    ) + ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_fixtures",
    srcs = glob(["tests/**"]),
    visibility = ["//visibility:public"],
)
