[package]
name = "sqruff"
description = "A high-speed SQL linter."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sqruff"
rust-version = "1.86"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binbstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-windows-x86_64.zip"
pkg-fmt = "zip"

[lints]
workspace = true

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
bench = false

[[test]]
name = "fix_return_code"
harness = false

[[test]]
name = "fix_parse_errors"
harness = false

[[test]]
name = "config_not_found"
harness = false

[[test]]
name = "configure_rule"
harness = false

[[test]]
name = "ui"
harness = false

[[test]]
name = "ui_with_python"
harness = false

[[test]]
name = "ui_with_jinja"
harness = false

[[test]]
name = "ui_with_dbt"
harness = false

[[test]]
name = "ui_github"
harness = false

[[test]]
name = "ui_json"
harness = false

[features]
python = ["sqruff-lib/python", "pyo3"]
codegen-docs = ["clap-markdown", "minijinja", "serde", "python"]

[dependencies]
sqruff-lib.workspace = true
sqruff-lsp.workspace = true
strum_macros.workspace = true

clap = { version = "4", features = ["derive"] }
console = "0.15.8"
ignore = "0.4.23"
pyo3 = { version = "0.24.1", features = ["auto-initialize"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
jemallocator = { version = "0.6.0", package = "tikv-jemallocator" }

# Codegen dependencies
clap-markdown = { version = "0.1.4", optional = true }
minijinja = { version = "2.8.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.19.1"
