[package]
name = "sqruff"
description = "A high-speed SQL linter."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sqruff"
rust-version = "1.88"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binbstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-windows-x86_64.zip"
pkg-fmt = "zip"

[lints]
workspace = true

[features]
parser = ["sqruff-cli-lib/parser"]
python = ["sqruff-cli-lib/python", "pyo3"]
codegen-docs = ["sqruff-cli-lib/codegen-docs"]
bench = []

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
bench = false
publish = false
required-features = ["bench"]

[[test]]
name = "fix_return_code"
harness = false

[[test]]
name = "fix_parse_errors"
harness = false

[[test]]
name = "config_not_found"
harness = false

[[test]]
name = "configure_rule"
harness = false

[[test]]
name = "ui"
harness = false

[[test]]
name = "ui_github"
harness = false

[[test]]
name = "ui_json"
harness = false

[[test]]
name = "dialect_override"
harness = false

[package.metadata.cargo-machete]
ignored = ["pyo3"]

[dependencies]
sqruff-cli-lib.workspace = true
pyo3 = { version = "0.25.1", features = ["auto-initialize"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.20.0"
