[package]
name = "sqruff"
description = "A high-speed SQL linter."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
default-run = "sqruff"
rust-version = "1.93"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-{ target-family }-{ target-arch }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sqruff-windows-x86_64.zip"
pkg-fmt = "zip"

[lints]
workspace = true

[features]
default = ["mimalloc"]
parser = ["sqruff-cli-lib/parser"]
python = ["sqruff-cli-lib/python", "pyo3"]
codegen-docs = ["sqruff-cli-lib/codegen-docs"]
bench = []
dhat-heap = ["dep:dhat"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
bench = false
publish = false
required-features = ["bench"]

[[test]]
name = "fix_return_code"
harness = false

[[test]]
name = "fix_parse_errors"
harness = false

[[test]]
name = "config_not_found"
harness = false

[[test]]
name = "configure_rule"
harness = false

[[test]]
name = "ui"
harness = false

[[test]]
name = "ui_github"
harness = false

[[test]]
name = "ui_json"
harness = false

[[test]]
name = "dialect_override"
harness = false

[package.metadata.cargo-machete]
ignored = ["pyo3"]

[dependencies]
sqruff-cli-lib.workspace = true
pyo3 = { version = "0.28.2", features = ["auto-initialize"], optional = true }
dhat = { version = "0.3.3", optional = true }

[target.'cfg(all(target_os = "windows", not(feature = "dhat-heap")))'.dependencies]
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.23.0"
sqruff-lib.workspace = true
