load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:cargo_build.bzl", "cargo_hack_suite")
load(":hack.bzl", "CLOSURE", "HACK", "MANIFEST")

# Per-feature `cargo check` targets mirroring `cargo hack --each-feature`.
# The HACK map lives in hack.bzl and is reconciled against cargo-hack by
# //:hack_reconcile. Run the whole crate sweep via `bazel test //crates/lib-core:hack`.
cargo_hack_suite(
    name = "hack",
    closure = CLOSURE,
    manifest = MANIFEST,
    variations = HACK,
    vendor = "//:cargo_deps",
)

ALL_FEATURES = [
    "serde",
    "stringify",
]

rust_library(
    name = "sqruff-lib-core",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ALL_FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "sqruff-lib-core-test",
    crate = ":sqruff-lib-core",
    crate_features = ALL_FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True),
)

filegroup(
    name = "machete_srcs",
    srcs = glob(
        [
            "src/**/*.rs",
            "tests/**/*.rs",
            "benches/**/*.rs",
        ],
        allow_empty = True,
    ) + ["Cargo.toml"],
    visibility = ["//visibility:public"],
)
