load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

ALL_FEATURES = [
    "athena",
    "bigquery",
    "clickhouse",
    "databricks",
    "duckdb",
    "hive",
    "mysql",
    "postgres",
    "redshift",
    "snowflake",
    "sparksql",
    "sqlite",
    "trino",
    "tsql",
]

rust_library(
    name = "sqruff-lib-dialects",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ALL_FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//crates/lib-core:sqruff-lib-core",
    ],
)
