[package]
name = "sqruff-lib-dialects"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "dialects"
harness = false

[features]
default = [
    "athena",
    "bigquery",
    "clickhouse",
    "duckdb",
    "hive",
    "postgres",
    "redshift",
    "snowflake",
    "sparksql",
    "sqlite",
    "trino",
]
athena = []
bigquery = []
clickhouse = []
duckdb = ["postgres"]
hive = []
postgres = []
redshift = ["postgres"]
snowflake = []
sparksql = ["hive"]
sqlite = []
trino = []

[dependencies]
sqruff-lib-core = { path = "../lib-core" }
itertools = "0.13.0"
ahash = "0.8.11"
dyn-clone = "1.0.17"
strum = "0.26.3"
serde_yaml = "0.9.34+deprecated"

[dev-dependencies]
sqruff-lib-core = { path = "../lib-core", features = ["serde", "stringify"] }
rayon = "1.10.0"
expect-test = "1.5.0"
glob = "0.3.1"
serde_yaml = "0.9.34+deprecated"
