[package]
name = "sqruff-lib-dialects"
description = "Implementation of sql dialects for sqruff."
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "dialects"
harness = false

[features]
default = [
    "athena",
    "bigquery",
    "clickhouse",
    "databricks",
    "duckdb",
    "hive",
    "mysql",
    "postgres",
    "redshift",
    "snowflake",
    "sparksql",
    "sqlite",
    "trino",
]
athena = []
bigquery = []
clickhouse = []
databricks = ["sparksql"]
duckdb = ["postgres"]
hive = []
mysql = []
postgres = []
redshift = ["postgres"]
snowflake = []
sparksql = ["hive"]
sqlite = []
trino = []

[dependencies]
sqruff-lib-core.workspace = true
strum.workspace = true
itertools = "0.14.0"
ahash = "0.8.11"
serde_yaml = "0.9.34+deprecated"

[dev-dependencies]
sqruff-lib-core.workspace = true
sqruff-lib-core.features = ["serde", "stringify"]
rayon = "1.10.0"
expect-test = "1.5.0"
glob = "0.3.1"
serde_yaml = "0.9.34+deprecated"
